err/classified.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/classified'...
Compiling './lib/python3.5/site-packages/classified/checksum.py'...
***   File "./lib/python3.5/site-packages/classified/checksum.py", line 8
    block_size = 64L
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/classified/incremental.py'...
***   File "./lib/python3.5/site-packages/classified/incremental.py", line 32
    self.db = dbm.open(self.database, 'c', 0600)
                                              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/classified/meta.py'...
***   File "./lib/python3.5/site-packages/classified/meta.py", line 139
    except CorruptionError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/classified/probe'...
Listing './lib/python3.5/site-packages/classified/probe/pan'...
Listing './lib/python3.5/site-packages/classified/probe/password'...
Listing './lib/python3.5/site-packages/classified/probe/pcap'...
Listing './lib/python3.5/site-packages/classified/probe/ssl'...
Listing './lib/python3.5/site-packages/classified/report'...
Compiling './lib/python3.5/site-packages/classified/report/mail.py'...
***   File "./lib/python3.5/site-packages/classified/report/mail.py", line 41
    print message.as_string()
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/classified/scanner.py'...
***   File "./lib/python3.5/site-packages/classified/scanner.py", line 74
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/classified/template'...
Listing './lib/python3.5/site-packages/classified/template/report'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
